cabal-version:      1.12
name:               schnorr-nizk
version:            0.3.0
license:            Apache
license-file:       LICENSE
maintainer:         Adjoint Inc (info@adjoint.io)
homepage:           https://github.com/adjoint-io/schnorr-nizk#readme
bug-reports:        https://github.com/adjoint-io/schnorr-nizk/issues
synopsis:           An implementation of the Schnorr protocol
description:        An implementation of the Schnorr protocol
category:           Cryptography
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/adjoint-io/schnorr-nizk

flag optimized
  description: Perform compiler optimizations
  default:     False

flag static
  description: Emit statically-linked binary
  default:     False

library
  exposed-modules:
    Schnorr
    Schnorr.Curve
    Schnorr.Curve25519
    Schnorr.Internal

  hs-source-dirs:     src
  other-modules:      Paths_schnorr_nizk
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    RecordWildCards

  ghc-options:
    -fwarn-tabs -fwarn-incomplete-patterns
    -fwarn-incomplete-record-updates -fwarn-redundant-constraints
    -fwarn-implicit-prelude -fwarn-overflowed-literals -fwarn-orphans
    -fwarn-identities -fwarn-dodgy-exports -fwarn-dodgy-imports
    -fwarn-duplicate-exports -fwarn-overlapping-patterns
    -fwarn-missing-fields -fwarn-missing-methods
    -fwarn-missing-signatures -fwarn-noncanonical-monad-instances
    -fwarn-unused-pattern-binds -fwarn-unused-type-patterns
    -fwarn-unrecognised-pragmas -fwarn-wrong-do-bind
    -fno-warn-name-shadowing -fno-warn-unused-binds
    -fno-warn-unused-matches -fno-warn-unused-do-bind

  build-depends:
      base        >=4.7      && <5
    , bytestring  >=0.10.8.2 && <0.11
    , cryptonite  >=0.25     && <0.27
    , memory      >=0.14.0   && <0.16
    , protolude   >=0.2      && <0.3
    , random      >=1.1      && <1.2

test-suite schnorr-nizk-test
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  other-modules:
    GroupLaws
    Paths_schnorr_nizk
    TestCurveOps
    TestGroupLaws
    TestSchnorr

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    FlexibleInstances
    LambdaCase
    OverloadedStrings
    RecordWildCards

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base              >=4.7      && <5
    , bytestring        >=0.10.8.2 && <0.11
    , cryptonite        >=0.25     && <0.27
    , memory            >=0.14.0   && <0.16
    , protolude         >=0.2      && <0.3
    , QuickCheck        >=2.13.2   && <2.14
    , random            >=1.1      && <1.2
    , schnorr-nizk
    , tasty             >=1.2.3    && <1.3
    , tasty-hunit       >=0.10.0.2 && <0.11
    , tasty-quickcheck  >=0.10.0.0 && <0.11
